tests/baselines/reference/derivedClassSuperStatementPosition.errors.txt
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperStatementPosition.ts(12,9): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperStatementPosition.ts(22,9): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperStatementPosition.ts(32,15): error TS2798: A 'super' call must be a root-level statement within a constructor of a derived class that contains initialized properties, parameter properties, or private identifiers.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperStatementPosition.ts(41,13): error TS2798: A 'super' call must be a root-level statement within a constructor of a derived class that contains initialized properties, parameter properties, or private identifiers.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperStatementPosition.ts(53,13): error TS2798: A 'super' call must be a root-level statement within a constructor of a derived class that contains initialized properties, parameter properties, or private identifiers.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperStatementPosition.ts(62,13): error TS2798: A 'super' call must be a root-level statement within a constructor of a derived class that contains initialized properties, parameter properties, or private identifiers.


==== tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperStatementPosition.ts (6 errors) ====
    class DerivedBasic extends Object {
        prop = 1;
        constructor() {
            super();
        }
    }
    
    class DerivedAfterParameterDefault extends Object {
        x1: boolean;
        x2: boolean;
        constructor(x = false) {
            this.x1 = x;
            ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            super(x);
            this.x2 = x;
        }
    }
    
    class DerivedAfterRestParameter extends Object {
        x1: boolean[];
        x2: boolean[];
        constructor(...x: boolean[]) {
            this.x1 = x;
            ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            super(x);
            this.x2 = x;
        }
    }
    
    class DerivedInConditional extends Object {
        prop = 1;
        constructor() {
            Math.random()
                ? super(1)
                  ~~~~~~~~
!!! error TS2798: A 'super' call must be a root-level statement within a constructor of a derived class that contains initialized properties, parameter properties, or private identifiers.
                : super(0);
        }
    }
    
    class DerivedInIf extends Object {
        prop = 1;
        constructor() {
            if (Math.random()) {
                super(1);
                ~~~~~~~~
!!! error TS2798: A 'super' call must be a root-level statement within a constructor of a derived class that contains initialized properties, parameter properties, or private identifiers.
            }
            else {
                super(0);
            }
        }
    }
    
    class DerivedInBlockWithProperties extends Object {
        prop = 1;
        constructor(private paramProp = 2) {
            {
                super();
                ~~~~~~~
!!! error TS2798: A 'super' call must be a root-level statement within a constructor of a derived class that contains initialized properties, parameter properties, or private identifiers.
            }
        }
    }
    
    class DerivedInConditionalWithProperties extends Object {
        prop = 1;
        constructor(private paramProp = 2) {
            if (Math.random()) {
                super(1);
                ~~~~~~~~
!!! error TS2798: A 'super' call must be a root-level statement within a constructor of a derived class that contains initialized properties, parameter properties, or private identifiers.
            } else {
                super(0);
            }
        }
    }
    